Remove Chinese locale and translate content